--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1254,28 +1254,28 @@ body {
 }
 #disconnect-bar {
   position: fixed;
-  top: -16px;
+  bottom: -50px;
   left: 0px;
   width: 100%;
-  height: 16px;
-  float: left;
-  display: inline-block;
+  height: 50px;
+  display: flex;
   background: #ff9800;
   color: #4c2d00;
+  font-family: 'maledpan';
   z-index: 9999;
-  text-align: center;
-  font-size: 0.7em;
-  line-height: 1.5em;
+  font-size: 1em;
+  justify-content: center;
+  align-items: center;
   transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
 }
 #disconnect-bar.-active {
-  transform: translateY(100%);
+  transform: translateY(-100%);
 }
 #disconnect-bar i {
-  margin-right: 5px;
+  margin-right: 10px;
 }
 /* Other Device and Screen */
 @media only screen and (min-width: 1910px) {
