--- a/app/css/style.css
+++ b/app/css/style.css
@@ -467,41 +467,11 @@ body {
 .container .option-list .button.right i {
   margin-right: 5px;
 }
-.container .templist {
-  width: 100%;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
-  align-items: center;
-}
-.container .templist .temp-card {
-  width: 32%;
-  margin-bottom: 2%;
-  display: flex;
-  height: 200px;
-  font-family: 'maledpan';
-  border-radius: 5px;
-  background: #EEEEEE;
-  color: #111111;
-  text-align: center;
-  text-decoration: none;
-  flex-direction: column;
-  justify-content: center;
-}
-.container .templist .temp-card .temp {
-  width: 100%;
-}
-.container .templist .temp-card .name {
-  width: 100%;
-}
-.container .templist .temp-card .desc {
-  width: 100%;
-}
 .logout {
   width: 100%;
   margin-top: 28%;
   float: left;
-  display: inline-block;
+  display: block;
   text-align: center;
   font-size: 1.2em;
   color: #4095c8;
@@ -694,7 +664,7 @@ body {
 .form .form-items .input .select {
   width: 100%;
   float: left;
-  display: inline-block;
+  display: block;
   position: relative;
 }
 .form .form-items .input .select:after {
@@ -713,7 +683,7 @@ body {
   margin: 0%;
   padding: 2.5% 3%;
   float: left;
-  display: inline-block;
+  display: block;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -750,7 +720,7 @@ body {
 .form .form-items .input p {
   width: 100%;
   float: left;
-  display: inline-block;
+  display: block;
   font-size: 1em;
   color: #111111;
   margin-top: 4%;
@@ -783,7 +753,7 @@ body {
 }
 .form .form-items .input button.btn {
   float: left;
-  display: inline-block;
+  display: block;
   font-size: 1.2em;
   padding: 3% 6%;
   border-radius: 5px;
@@ -807,7 +777,7 @@ body {
 }
 .form .form-items .input a.btn-nav {
   float: right;
-  display: inline-block;
+  display: block;
   font-size: 1em;
   padding: 3% 6%;
   line-height: 1.1em;
@@ -831,12 +801,12 @@ body {
 .form .form-items .input .list {
   width: 100%;
   float: left;
-  display: inline-block;
+  display: block;
 }
 .form .form-items .input .list .list-items {
   width: 100%;
   float: left;
-  display: inline-block;
+  display: block;
   color: #3581c2;
   margin-top: 1.5%;
   background: #4095c8;
@@ -846,7 +816,7 @@ body {
 .form .form-items .input .list .list-items .c {
   width: 82%;
   float: left;
-  display: inline-block;
+  display: block;
   padding: 2% 4%;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -858,7 +828,7 @@ body {
 .form .form-items .input .list .list-items .btn {
   width: 6%;
   float: right;
-  display: inline-block;
+  display: block;
   padding: 2%;
   text-align: center;
 }
@@ -868,7 +838,7 @@ body {
 .form .form-items .input .list-input {
   width: 100%;
   float: left;
-  display: inline-block;
+  display: block;
   margin-top: 2%;
   position: relative;
   overflow: hidden;
@@ -877,7 +847,7 @@ body {
   width: 93.5%;
   padding: 3%;
   float: left;
-  display: inline-block;
+  display: block;
   border: 0px;
   font-family: 'maledpan';
   font-size: 1em;
@@ -898,7 +868,7 @@ body {
   width: 8%;
   padding: 3%;
   float: right;
-  display: inline-block;
+  display: block;
   text-align: center;
   color: #3581c2;
   font-size: 1.2em;
@@ -974,7 +944,7 @@ body {
   width: 100%;
   margin-top: 5%;
   float: left;
-  display: inline-block;
+  display: block;
   height: 250px;
 }
 .device-info .graph canvas {
@@ -1005,7 +975,7 @@ body {
   width: 100%;
   margin: 20% 0%;
   float: left;
-  display: inline-block;
+  display: block;
   text-align: center;
   color: #111111;
   font-size: 0.9em;
@@ -1050,7 +1020,7 @@ body {
 .device-history .history .logitems .icon {
   width: 10%;
   float: left;
-  display: inline-block;
+  display: block;
   text-align: right;
 }
 .device-history .history .logitems .icon i.fa-angle-double-down {
@@ -1080,7 +1050,7 @@ body {
   height: 3px;
   background: #4095c8;
   float: left;
-  display: inline-block;
+  display: block;
   z-index: 100;
   display: none;
 }
@@ -1089,10 +1059,10 @@ body {
   top: 0px;
   left: 0px;
   width: 5%;
-  height: 1px;
+  height: 3px;
   background: #4095c8;
   float: left;
-  display: inline-block;
+  display: block;
   z-index: 100;
   transition: all 10s ease-in-out;
   -moz-transition: all 10s ease-in-out;
@@ -1109,106 +1079,18 @@ body {
   width: 100%;
   height: 100%;
   float: left;
-  display: inline-block;
+  display: block;
   z-index: 999;
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
   background: rgba(0, 0, 0, 0.65);
   display: none;
 }
-.slide-panel {
-  position: fixed;
-  top: 0px;
-  left: -20%;
-  width: 20%;
-  height: 100%;
-  float: left;
-  display: inline-block;
-  background: #ffffff;
-  z-index: 9999;
-  transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -webkit-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-}
-.slide-panel.-toggle {
-  transform: translateX(100%);
-}
-.slide-panel.-zone-panel {
-  left: inherit;
-  right: -20%;
-}
-.slide-panel.-zone-panel.-toggle {
-  transform: translateX(-100%);
-}
-.slide-panel .btn-close {
-  width: 80%;
-  float: left;
-  display: inline-block;
-  color: #1d252b;
-  padding: 22px 10%;
-  height: 16px;
-  font-size: 1.3em;
-  line-height: 1em;
-  text-align: center;
-}
-.slide-panel .btn-close:hover {
-  cursor: pointer;
-}
-.slide-panel .menu-list {
-  width: 100%;
-  float: left;
-  display: inline-block;
-  padding-bottom: 3%;
-  margin-bottom: 3%;
-  border-bottom: 1px solid #1d252b;
-}
-.slide-panel .menu-list:last-child {
-  border: 0px;
-}
-.slide-panel .menu-list.-profile {
-  position: absolute;
-  bottom: 0px;
-  left: 0px;
-  margin-bottom: 0%;
-  padding-bottom: 0%;
-  border-bottom: 0px;
-}
-.slide-panel .menu-list a.btn {
-  width: 84%;
-  padding: 6% 8%;
-  float: left;
-  display: inline-block;
-  color: #000000;
-  font-size: 1em;
-  text-decoration: none;
-}
-.slide-panel .menu-list a.btn.-location-items i {
-  color: #4095c8;
-}
-.slide-panel .menu-list a.btn i {
-  margin-right: 20px;
-  font-size: 1.2em;
-}
-.slide-panel .menu-list a.btn:hover {
-  color: #64bee3;
-  background: #030a10;
-  cursor: pointer;
-}
-.slide-panel .menu-list a.btn.-active {
-  color: #4095c8;
-}
-.slide-panel .menu-list a.btn.btn-logout {
-  color: #e74c3c;
-}
-.slide-panel .menu-list a.btn.btn-logout:hover {
-  color: #e74c3c;
-}
 .message-box {
   width: 100%;
   padding: 12% 0%;
   float: left;
-  display: inline-block;
+  display: block;
   text-align: center;
 }
 .message-box.-minibox {
@@ -1220,7 +1102,7 @@ body {
 .message-box .icon {
   width: 100%;
   float: left;
-  display: inline-block;
+  display: block;
   font-size: 5em;
   color: #1d252b;
 }
@@ -1228,14 +1110,14 @@ body {
   width: 100%;
   margin-bottom: 8%;
   float: left;
-  display: inline-block;
+  display: block;
   font-size: 2em;
   color: #000000;
 }
 .message-box .control {
   width: 100%;
   float: left;
-  display: inline-block;
+  display: block;
 }
 .message-box .control a.btn {
   text-decoration: none;
