--- a/app/less/style.less
+++ b/app/less/style.less
@@ -313,110 +313,13 @@
 			}
 		}
 	}
-
-	.templist {
-		width: 100%;
-		display: flex;
-		flex-flow: row wrap;
-		justify-content: space-between;
-		align-items: center;
-		
-		.temp-card{
-			width: 32%;
-			margin-bottom: 2%;
-			display: flex;
-			height: 200px;
-			font-family: @font_family_topic;
-			border-radius: 5px;
-			background: #EEEEEE;
-			color: @text_normal_color;
-			text-align: center;
-			text-decoration: none;
-			flex-direction: column;
-			justify-content: center;
-			
-			
-
-			.temp {
-				width: 100%;
-			}
-			.name {
-				width: 100%;
-			}
-			.desc {
-				width: 100%;
-			}
-	
-			// .icon{
-			// 	position: absolute;
-			// 	top: 0px;
-			// 	right: 0px;
-			// 	width: 80%;
-			// 	padding: 10%;
-			// 	display: inline-block;
-			// 	font-size: 1em;
-			// 	line-height: 1em;
-			// 	text-align: right;
-			// }
-			// a.temp{
-			// 	width: 80%;
-			// 	padding: 5% 10%;
-			// 	padding-top: 1%;
-			// 	float: left;
-			// 	display: inline-block;
-			// 	font-size: 4em;
-			// 	text-decoration: none;
-			// 	line-height: 1em;
-			// 	color: @bg_color_dark;
-			// 	font-weight: bold;
-			// }
-	
-			// .detail{
-			// 	width: 80%;
-			// 	padding: 0% 10%;
-			// 	float: left;
-			// 	display: inline-block;
-			// 	line-height: 1.3em;
-	
-			// 	.name{
-			// 		width: 100%;
-			// 		float: left;
-			// 		display: inline-block;
-			// 		font-size: 1.4em;
-			// 		text-overflow: ellipsis;
-			// 		white-space: nowrap;
-			// 		overflow: hidden;
-			// 		padding: 4% 0%;
-	
-			// 		a{
-			// 			color: @text_normal_color;
-			// 			text-decoration: none;
-	
-			// 			&:hover{ text-decoration: underline; }
-			// 		}
-			// 		i{ font-size: 0.8em; }
-			// 	}
-	
-			// 	.desc{
-			// 		width: 100%;
-			// 		float: left;
-			// 		display: inline-block;
-			// 		font-size: 0.75em;
-			// 		color: @text_normal_color;
-			// 		text-overflow: ellipsis;
-			// 		white-space: nowrap;
-			// 		overflow: hidden;
-			// 	}
-			// }
-		}
-	}
 }
 
 .logout{
 	width: 100%;
 	margin-top: 28%;
 	float: left;
-	display: inline-block;
+	display: block;
 	text-align: center;
 	font-size: 1.2em;
 	color: @primary_color;
@@ -614,7 +517,7 @@
 			.select{
 				width: 100%;
 				float: left;
-				display: inline-block;
+				display: block;
 				position: relative;
 
 				&:after{
@@ -634,7 +537,7 @@
 					margin: 0%;
 					padding: 2.5% 3%;
 					float: left;
-					display: inline-block;
+					display: block;
 					-webkit-appearance: none;
 					-moz-appearance: none;
 					appearance: none;
@@ -667,7 +570,7 @@
 			p{
 				width: 100%;
 				float: left;
-				display: inline-block;
+				display: block;
 				font-size: 1em;
 				color: @text_normal_color;
 				margin-top: 4%;
@@ -701,7 +604,7 @@
 
 			button.btn{
 				float: left;
-				display: inline-block;
+				display: block;
 				font-size: 1.2em;
 				padding: 3% 6%;
 				border-radius: 5px;
@@ -724,7 +627,7 @@
 
 			a.btn-nav{
 				float: right;
-				display: inline-block;
+				display: block;
 				font-size: 1em;
 				padding: 3% 6%;
 				line-height: 1.1em;
@@ -744,12 +647,12 @@
 			.list{
 				width: 100%;
 				float: left;
-				display: inline-block;
+				display: block;
 
 				.list-items{
 					width: 100%;
 					float: left;
-					display: inline-block;
+					display: block;
 					color: @primary_color_dark;
 					margin-top: 1.5%;
 					background: @primary_color;
@@ -759,7 +662,7 @@
 					.c{
 						width: 82%;
 						float: left;
-						display: inline-block;
+						display: block;
 						padding: 2% 4%;
 						text-overflow: ellipsis;
 						white-space: nowrap;
@@ -771,7 +674,7 @@
 					.btn{
 						width: 6%;
 						float: right;
-						display: inline-block;
+						display: block;
 						padding: 2%;
 						text-align: center;
 
@@ -783,7 +686,7 @@
 			.list-input{
 				width: 100%;
 				float: left;
-				display: inline-block;
+				display: block;
 				margin-top: 2%;
 				position: relative;
 				overflow: hidden;
@@ -792,7 +695,7 @@
 					width: 93.5%;
 					padding: 3%;
 					float: left;
-					display: inline-block;
+					display: block;
 					border: 0px;
 					font-family: @font_family_topic;
 					font-size: 1em;
@@ -813,7 +716,7 @@
 					width: 8%;
 					padding: 3%;
 					float: right;
-					display: inline-block;
+					display: block;
 					text-align: center;
 					color: @primary_color_dark;
 					font-size: 1.2em;
@@ -895,7 +798,7 @@
 		width: 100%;
 		margin-top: 5%;
 		float: left;
-		display: inline-block;
+		display: block;
 		height: 250px;
 
 		canvas{
@@ -930,7 +833,7 @@
 			width: 100%;
 			margin: 20% 0%;
 			float: left;
-			display: inline-block;
+			display: block;
 			text-align: center;
 			color: @text_normal_color;
 			font-size: 0.9em;
@@ -973,7 +876,7 @@
 			.icon{
 				width: 10%;
 				float: left;
-				display: inline-block;
+				display: block;
 				text-align: right;
 
 				i.fa-angle-double-down{ color: @primary_color; }
@@ -1006,7 +909,7 @@
 	height: 3px;
 	background: @primary_color;
 	float: left;
-	display: inline-block;
+	display: block;
 	z-index: 100;
 	display: none;
 }
@@ -1017,15 +920,17 @@
 	top: 0px;
 	left: 0px;
 	width: 5%;
-	height: 1px;
+	height: 3px;
 	background: @primary_color;
 	float: left;
-	display: inline-block;
+	display: block;
 	z-index: 100;
 
 	.transitionAnimation(10s);
 
-	&.-action{ transform: translateX(1900%); }
+	&.-action{
+		transform: translateX(1900%);
+	}
 }
 
 #filter{
@@ -1035,7 +940,7 @@
 	width: 100%;
 	height: 100%;
 	float: left;
-	display: inline-block;
+	display: block;
 	z-index: 999;
 	-webkit-backdrop-filter: blur(5px);
 	backdrop-filter: blur(5px);
@@ -1043,96 +948,11 @@
 	display: none;
 }
 
-.slide-panel{
-	position: fixed;
-	top: 0px;
-	left: -20%;
-	width: 20%;
-	height: 100%;
-	float: left;
-	display: inline-block;
-	background: @bg_color;
-	z-index: 9999;
-
-	.transitionAnimation(0.3s);
-
-	&.-toggle{ transform: translateX(100%); }
-
-	&.-zone-panel{
-		left: inherit;
-		right: -20%;
-		&.-toggle{ transform: translateX(-100%); }
-	}
-
-	.btn-close{
-		width: 80%;
-		float: left;
-		display: inline-block;
-		color: @bg_color_light;
-		padding: 22px 10%;
-		height: 16px;
-		font-size: 1.3em;
-		line-height: 1em;
-		text-align: center;
-
-		&:hover{ cursor: pointer; }
-	}
-
-	.menu-list{
-		width: 100%;
-		float: left;
-		display: inline-block;
-		padding-bottom: 3%;
-		margin-bottom: 3%;
-		border-bottom: 1px solid @bg_color_light;
-
-		&:last-child{ border: 0px; }
-
-		&.-profile{
-			position: absolute;
-			bottom: 0px;
-			left: 0px;
-			margin-bottom: 0%;
-			padding-bottom: 0%;
-			border-bottom: 0px;
-		}
-
-		a.btn{
-			width: 84%;
-			padding: 6% 8%;
-			float: left;
-			display: inline-block;
-			color: @text_active_color;
-			font-size: 1em;
-			text-decoration: none;
-
-			&.-location-items{
-				i{ color: @primary_color; }
-			}
-
-			i{ margin-right: 20px; font-size: 1.2em; }
-
-			&:hover{
-				color: @primary_color_light;
-				background: @bg_color_dark;
-				cursor: pointer;
-			}
-
-			&.-active{ color: @primary_color; }
-
-			&.btn-logout{
-				color: @second_color;
-				&:hover{ color: @second_color; }
-			}
-		}
-	}
-}
-
 .message-box{
 	width: 100%;
 	padding: 12% 0%;
 	float: left;
-	display: inline-block;
+	display: block;
 	text-align: center;
 
 	&.-minibox{
@@ -1143,7 +963,7 @@
 	.icon{
 		width: 100%;
 		float: left;
-		display: inline-block;
+		display: block;
 		font-size: 5em;
 		color: @bg_color_light;
 	}
@@ -1151,14 +971,14 @@
 		width: 100%;
 		margin-bottom: 8%;
 		float: left;
-		display: inline-block;
+		display: block;
 		font-size: 2em;
 		color: @text_active_color;
 	}
 	.control{
 		width: 100%;
 		float: left;
-		display: inline-block;
+		display: block;
 
 		a.btn{
 			text-decoration: none;
@@ -1194,7 +1014,7 @@
 	align-items: center;
 	
 	.transitionAnimation(0.3s);
-	
+
 	&.-active {
 		transform: translateY(-100%);
 	}
