--- a/app/css/style.css
+++ b/app/css/style.css
@@ -592,10 +592,9 @@ body {
 }
 .form {
   width: 40%;
-  margin: 0% 30%;
-  margin-top: 80px;
-  float: left;
-  display: block;
+  margin: 80px 30%;
+  display: flex;
+  flex-direction: column;
 }
 .form h2 {
   width: 100%;
@@ -606,29 +605,63 @@ body {
   font-size: 3em;
   color: #000000;
   border-bottom: 1px solid #dddddd;
+  font-family: 'maledpan';
 }
 .form .form-items {
-  width: 100%;
-  float: left;
-  display: block;
-  margin-bottom: 3%;
+  display: flex;
+  flex-direction: column;
+  padding: 10px 0;
+}
+.form .form-items.toggle-type {
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 .form .form-items.-hidden {
   display: none;
 }
-.form .form-items .label {
+.form .form-items button {
   width: 100%;
-  padding: 2% 0%;
   float: left;
   display: block;
-  margin-right: 5%;
+  font-size: 1.2em;
+  border-radius: 5px;
+  border: 0px;
+  margin: 0%;
+  padding: 2% 0;
+  margin-top: 5%;
+  background: #4095c8;
+  color: #FFFFFF;
+  font-family: 'maledpan';
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.25);
+}
+.form .form-items button.-completed {
+  background: transparent;
+  color: #4095c8;
+}
+.form .form-items button:hover {
+  cursor: pointer;
+}
+.form .form-items button i {
+  margin-left: 10px;
+}
+.form .form-items .label {
   font-size: 1.2em;
   color: #000000;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 .form .form-items .input {
-  width: 100%;
-  float: left;
-  display: block;
+  padding: 1% 0;
+}
+.form .form-items .input.twins {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.form .form-items .input.twins .input-text {
+  width: 44%;
 }
 .form .form-items .input .input-text,
 .form .form-items .input .input-textarea {
@@ -641,7 +674,6 @@ body {
   margin: 0px;
   background: #EEEEEE;
   color: #000000;
-  font-family: 'maledpan';
   border-radius: 5px;
   resize: none;
   border: 1px solid #DDDDDD;
@@ -649,14 +681,6 @@ body {
 .form .form-items .input .input-text:focus,
 .form .form-items .input .input-textarea:focus {
   border: 1px solid #999999;
-}
-.form .form-items .input .input-text.-haft,
-.form .form-items .input .input-textarea.-haft {
-  width: 42%;
-}
-.form .form-items .input .input-text.-haft-right,
-.form .form-items .input .input-textarea.-haft-right {
-  float: right;
 }
 .form .form-items .input .input-textarea {
   height: 70px;
@@ -692,8 +716,7 @@ body {
   line-height: 1.3em;
   background: #dddddd;
   color: #4095c8;
-  border-radius: 2px;
-  font-family: 'maledpan';
+  border-radius: 5px;
   border: 1px solid #1d252b;
 }
 .form .form-items .input .select select:hover {
@@ -750,53 +773,6 @@ body {
 }
 .form .form-items .input p a i {
   margin-left: 5px;
-}
-.form .form-items .input button.btn {
-  float: left;
-  display: block;
-  font-size: 1.2em;
-  padding: 3% 6%;
-  border-radius: 5px;
-  border: 0px;
-  margin: 0%;
-  margin-top: 5%;
-  background: #4095c8;
-  color: #FFFFFF;
-  font-family: 'maledpan';
-  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.25);
-}
-.form .form-items .input button.btn.-completed {
-  background: transparent;
-  color: #4095c8;
-}
-.form .form-items .input button.btn:hover {
-  cursor: pointer;
-}
-.form .form-items .input button.btn i {
-  margin-left: 10px;
-}
-.form .form-items .input a.btn-nav {
-  float: right;
-  display: block;
-  font-size: 1em;
-  padding: 3% 6%;
-  line-height: 1.1em;
-  margin: 0%;
-  margin-top: 5%;
-  font-family: 'maledpan';
-  text-decoration: none;
-  background: transparent;
-  color: #111111;
-  visibility: hidden;
-}
-.form .form-items .input a.btn-nav.-show {
-  visibility: visible;
-}
-.form .form-items .input a.btn-nav i {
-  margin-left: 10px;
-}
-.form .form-items .input a.btn-nav:hover {
-  text-decoration: underline;
 }
 .form .form-items .input .list {
   width: 100%;
