--- a/app/less/style.less
+++ b/app/less/style.less
@@ -453,10 +453,9 @@
 
 .form{
 	width: 40%;
-	margin: 0% 30%;
-	margin-top: 80px;
-	float: left;
-	display: block;
+	margin: 80px 30%;
+	display: flex;
+	flex-direction: column;
 
 	h2 {
 		width: 100%;
@@ -467,30 +466,70 @@
 		font-size: 3em;
 		color: @text_active_color;
 		border-bottom: 1px solid @border_color;
+		font-family: @font_family_topic;
 	}
 
-	.form-items{
-		width: 100%;
-		float: left;
-		display: block;
-		margin-bottom: 3%;
+	.form-items {
+		display: flex;
+		flex-direction: column;
+		padding: 10px 0;
+
+		&.toggle-type {
+			flex-direction: row;
+			justify-content: space-between;
+			align-items: center;
+		}
 
 		&.-hidden{ display: none; }
 
-		.label{
+		button {
 			width: 100%;
-			padding: 2% 0%;
 			float: left;
 			display: block;
-			margin-right: 5%;
 			font-size: 1.2em;
-			color: @text_active_color;
+			border-radius: 5px;
+			border: 0px;
+			margin: 0%;
+			padding: 2% 0;
+			margin-top: 5%;
+			background: @primary_color;
+			color: #FFFFFF;
+			font-family: @font_family_topic;
+			box-shadow: 1px 3px 5px rgba(0,0,0,0.25);
+
+			&.-completed{
+				background: transparent;
+				color: @primary_color;
+			}
+
+			&:hover {
+				cursor: pointer;
+			}
+			i {
+				margin-left: 10px;
+			}
 		}
 
-		.input{
-			width: 100%;
-			float: left;
-			display: block;
+		.label {
+			font-size: 1.2em;
+			color: @text_active_color;
+			display: flex;
+			flex-direction: row;
+			justify-content: space-between;
+		}
+
+		.input {
+			padding: 1% 0;
+
+			&.twins {
+				display: flex;
+				flex-direction: row;
+				justify-content: space-between;
+
+				.input-text {
+					width: 44%;
+				}
+			}
 
 			.input-text, .input-textarea{
 				width: 96%;
@@ -502,17 +541,18 @@
 				margin: 0px;
 				background: #EEEEEE;
 				color: #000000;
-				font-family: @font_family_topic;
 				border-radius: 5px;
 				resize: none;
 				border: 1px solid #DDDDDD;
 
-				&:focus{ border: 1px solid #999999; }
-				&.-haft{ width: 42%; }
-				&.-haft-right{ float: right; }
+				&:focus {
+					border: 1px solid #999999;
+				}
 			}
 
-			.input-textarea{ height: 70px; }
+			.input-textarea {
+				height: 70px;
+			}
 
 			.select{
 				width: 100%;
@@ -546,8 +586,7 @@
 					line-height: 1.3em;
 					background: @border_color;
 					color: @primary_color;
-					border-radius: 2px;
-					font-family: @font_family_topic;
+					border-radius: 5px;
 					border: 1px solid @bg_color_light;
 
 					&:hover{ cursor: pointer; }
@@ -600,48 +639,6 @@
 
 					i{ margin-left: 5px; }
 				}
-			}
-
-			button.btn{
-				float: left;
-				display: block;
-				font-size: 1.2em;
-				padding: 3% 6%;
-				border-radius: 5px;
-				border: 0px;
-				margin: 0%;
-				margin-top: 5%;
-				background: @primary_color;
-				color: #FFFFFF;
-				font-family: @font_family_topic;
-				box-shadow: 1px 3px 5px rgba(0,0,0,0.25);
-
-				&.-completed{
-					background: transparent;
-					color: @primary_color;
-				}
-
-				&:hover{ cursor: pointer; }
-				i{ margin-left: 10px; }
-			}
-
-			a.btn-nav{
-				float: right;
-				display: block;
-				font-size: 1em;
-				padding: 3% 6%;
-				line-height: 1.1em;
-				margin: 0%;
-				margin-top: 5%;
-				font-family: @font_family_topic;
-				text-decoration: none;
-				background: transparent;
-				color: @text_normal_color;
-				visibility: hidden;
-
-				&.-show{ visibility: visible }
-				i{ margin-left: 10px; }
-				&:hover{ text-decoration: underline; }
 			}
 
 			.list{
